' Generated by UML Generator
' Encoded: XLHDJzmm4BtdLrZYaXLPj5mZYa11Gdi0LMpLQ-MrXwoBOqVskA95zBTtd6KT9q7gSSRlpSUR6Tzuv0v3fml_eapF7U-OqDpxMqIdzW5XAwpPgJ_0DiL1IM12EQ6XA0OKkvMTybvPqnn0l81ZRmLZvsyK5PLuPz_1gUVV8yWf90yllQpP3eC4WtSSUSNmuC0Vh2Q_j66lOLMplRKQk2dUJyaQ6vo79tY-7DAi3UyWnd7AjD4MLavj1rAXhvao6Errh6qCKkRyYkLiiZBkAl9Qm4V2bwiiGtGsHCkSgTXxnoLiZGU72rdKu1uGIob4dJLQiJQYZcNKx9TLSaoHqOw287-z2t2IC7e6DdNnmFkhKsjRWz22kuxlIYPrV71pGUTss_Ci-5_VWr1SVtMMqdHfokFaJffdXPOV6IisorUnt8gId-KoJQUp58NWD8pxdiTPf1BFUyBZOcRV-2juKcg2FVFPGxw7UVn1paXhhDOWaDgzolICc5tO_wGNFs8pyNCivKkQxMWpWY_tIRjftZdki-kWsXkkHT0SxN7XrcdXvBWLx0kxt6msQJO98px8G84-ET0VVPk6Np6flB31u1FXvr9HHOjluUBYEezNJA_Z_w_ZHHJJFkVK6p2IlhD_
' URL: http://www.plantuml.com/plantuml/uml/XLHDJzmm4BtdLrZYaXLPj5mZYa11Gdi0LMpLQ-MrXwoBOqVskA95zBTtd6KT9q7gSSRlpSUR6Tzuv0v3fml_eapF7U-OqDpxMqIdzW5XAwpPgJ_0DiL1IM12EQ6XA0OKkvMTybvPqnn0l81ZRmLZvsyK5PLuPz_1gUVV8yWf90yllQpP3eC4WtSSUSNmuC0Vh2Q_j66lOLMplRKQk2dUJyaQ6vo79tY-7DAi3UyWnd7AjD4MLavj1rAXhvao6Errh6qCKkRyYkLiiZBkAl9Qm4V2bwiiGtGsHCkSgTXxnoLiZGU72rdKu1uGIob4dJLQiJQYZcNKx9TLSaoHqOw287-z2t2IC7e6DdNnmFkhKsjRWz22kuxlIYPrV71pGUTss_Ci-5_VWr1SVtMMqdHfokFaJffdXPOV6IisorUnt8gId-KoJQUp58NWD8pxdiTPf1BFUyBZOcRV-2juKcg2FVFPGxw7UVn1paXhhDOWaDgzolICc5tO_wGNFs8pyNCivKkQxMWpWY_tIRjftZdki-kWsXkkHT0SxN7XrcdXvBWLx0kxt6msQJO98px8G84-ET0VVPk6Np6flB31u1FXvr9HHOjluUBYEezNJA_Z_w_ZHHJJFkVK6p2IlhD_
' Generated on: 2026-03-14T11:15:05.336768300

@startuml
skinparam classAttributeIconSize 0
hide circle

class AdmissionChecker {
  +{static} VerifyAdmissionCriteria(sd: StudentData, threshold: double): boolean
}

class CourseRef1 {
  -name: String
  -code: String
  -credits: int
  --
  +CourseRef1(name: String, code: String, credits: int)
  +getName(): String
  +getCode(): String
}

class GradeInserter {
  +{static} insertGrade(sd: StudentData, c: CourseRef1, grade: int): void
}

class StudentData {
  -taxDue: double
  -grades: Map<String, Integer>
  -id: int
  -surname: String
  -name: String
  -gpa: double
  ~specialProgramAdmission: boolean
  --
  +StudentData(id: int, surname: String, name: String)
  #insertGrade(code: String, grade: int): void
  #getGpa(): double
  +print(): String
  +getTaxesDue(): double
  #setTaxesDue(d: double): void
  #getGrades(): Collection<Integer>
  #getSubjectsGrades(): Map<String,Integer>
  #setAdmissionStatus(b: boolean): void
  #getAdmissionStatus(): boolean
}

class TaxCalculator {
  -{static} due: double = 1000
  --
  +{static} calculateTax(sd: StudentData, t_pga: double, discountRate: double): void
}

AdmissionChecker ..> StudentData
GradeInserter ..> StudentData
GradeInserter ..> CourseRef1
TaxCalculator ..> StudentData
@enduml